fix(style): paragraph spacing

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -50,7 +50,7 @@ h6 {
 ------------------------------ */
 
 p {
-  margin: $spacing-500;
+  margin-bottom: $spacing-500;
 }
 
 /*Rebecca added this*/
